bk_ida/gobmkida/c1/is_suicide
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_suicide/src/engine/board.c:1590:24: error: use of undeclared identifier 'byte_9AA89F'
v4 = ( unsigned __int8)byte_9AA89F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_suicide/src/engine/board.c:1591:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[pos] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_suicide/src/engine/board.c:1594:24: error: use of undeclared identifier 'byte_9AA88C'
v5 = ( unsigned __int8)byte_9AA88C[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_suicide/src/engine/board.c:1595:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[pos] ) 
     ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/is_suicide/src/obj/1/board.o] Error 1
